# Roboracer-Final-Project

./: Instructions.md  README.md  centerline_only.py  final.py  final.sh  optimize.py  rtabmap_f1tenth.launch.py
F1TENTH-EKF/sensors_bringup/: CMakeLists.txt  package.xml
F1TENTH-EKF/sensors_bringup/config/: ekf.yaml
F1TENTH-EKF/sensors_bringup/launch/: sensors_bringup.launch.py
F1TENTH-EKF/sensors_bringup/src/: imu_covariance_override.py
F1TENTH-PF-EKF/config/: localize.yaml
F1TENTH-PF-EKF/maps/: hall.pgm  hall.yaml  race_track.pgm  race_track.yaml
F1TENTH-PF-EKF/particle_filter/: particle_filter.py
F1TENTH-Pure-Pursuit/pure_pursuit_reactive/: CMakeLists.txt  package.xml  waypoint_recorder.py  waypoints.csv  waypoints3.csv  waypoints_best.csv
F1TENTH-Pure-Pursuit/pure_pursuit_reactive/launch/: racing_system_launch.py
F1TENTH-Pure-Pursuit/pure_pursuit_reactive/pure_pursuit/: viz_waypoints.py
F1TENTH-Pure-Pursuit/pure_pursuit_reactive/src/: pure_pursuit_node.cpp  velocity_obstacles.cpp  wall_follow_filter.cpp
Wall_follow/wall_follow/: CMakeLists.txt  package.xml  setup.py
Wall_follow/wall_follow/scripts/: reactive_node.py
Wall_follow/wall_follow/src/: reactive_node.cpp
